--- a/issuance.html
+++ b/issuance.html
@@ -23,11 +23,13 @@
 
     <nav class="max-w-6xl mx-auto w-full flex justify-between items-center mb-12">
         <a href="index.html" class="font-black text-xl tracking-tighter uppercase text-[#0A1628]">APENZAR</a>
-        <div class="hidden md:flex gap-6">
+        <div class="hidden md:flex gap-8">
+            <a href="about.html" class="nav-link">00 About</a>
             <a href="market.html" class="nav-link">01 Market</a>
             <a href="ledger.html" class="nav-link">02 Ledger</a>
             <a href="mechanism.html" class="nav-link">03 Mechanism</a>
-            <span class="nav-link text-black">04 Access</span>
+            <a href="issuance.html" class="nav-link text-[#0A1628]">04 Access</a>
+            <a href="help.html" class="nav-link">05 Help</a>
         </div>
     </nav>
 
