--- a/market.html
+++ b/market.html
@@ -22,11 +22,13 @@
             <a href="index.html" class="font-black text-xl tracking-tighter text-[#0A1628] block leading-none mb-1">APENZAR</a>
             <div class="text-[9px] font-bold uppercase tracking-widest text-gray-400">Beverly Hills, CA</div>
         </div>
-        <div class="hidden md:flex gap-6">
-            <span class="nav-link text-black">01 Market</span>
+        <div class="hidden md:flex gap-8">
+            <a href="about.html" class="nav-link">00 About</a>
+            <a href="market.html" class="nav-link text-[#0A1628]">01 Market</a>
             <a href="ledger.html" class="nav-link">02 Ledger</a>
             <a href="mechanism.html" class="nav-link">03 Mechanism</a>
             <a href="issuance.html" class="nav-link">04 Access</a>
+            <a href="help.html" class="nav-link">05 Help</a>
         </div>
     </nav>
 
