--- a/mechanism.html
+++ b/mechanism.html
@@ -24,10 +24,12 @@
             <div class="text-[9px] font-bold uppercase tracking-widest text-gray-400">Beverly Hills, CA</div>
         </div>
         <div class="hidden md:flex gap-8">
+            <a href="about.html" class="nav-link">00 About</a>
             <a href="market.html" class="nav-link">01 Market</a>
             <a href="ledger.html" class="nav-link">02 Ledger</a>
-            <span class="nav-link text-black">03 Mechanism</span>
+            <a href="mechanism.html" class="nav-link text-[#0A1628]">03 Mechanism</a>
             <a href="issuance.html" class="nav-link">04 Access</a>
+            <a href="help.html" class="nav-link">05 Help</a>
         </div>
     </nav>
 
