--- a/help.html
+++ b/help.html
@@ -12,6 +12,7 @@
         .nav-link { font-size: 0.7rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; color: #999; transition: 0.3s; }
         .nav-link:hover { color: #0A1628; }
         
+        /* Pricing Cards */
         .help-card { background: white; border: 1px solid #E5E7EB; padding: 2.5rem; transition: 0.3s; height: 100%; display: flex; flex-direction: column; justify-content: space-between; }
         .help-card:hover { border-color: var(--navy); transform: translateY(-3px); box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
         
@@ -30,13 +31,13 @@
                 <div class="text-[9px] font-bold uppercase tracking-[0.2em] text-gray-400">Global OS Holdings</div>
             </a>
         </div>
-        <div class="hidden md:flex gap-8">
+        <div class="hidden md:flex gap-6">
             <a href="about.html" class="nav-link">00 About</a>
             <a href="market.html" class="nav-link">01 Market</a>
             <a href="ledger.html" class="nav-link">02 Ledger</a>
             <a href="mechanism.html" class="nav-link">03 Mechanism</a>
             <a href="issuance.html" class="nav-link">04 Access</a>
-            <a href="help.html" class="nav-link text-[#0A1628]">05 Help</a>
+            <span class="nav-link text-black">05 Help</span>
         </div>
     </nav>
 
@@ -64,7 +65,7 @@
                     </p>
                     <ul class="text-xs text-gray-500 space-y-3 mb-8">
                         <li class="flex items-center"><span class="text-gray-300 mr-2">●</span> 72-Hour Response Time</li>
-                        <li class="flex items-center"><span class="text-gray-300 mr-2">●</span> Written Email Response</li>
+                        <li class="flex items-center"><span class="text-gray-300 mr-2">●</span> <strong>Formal Written Response</strong></li>
                         <li class="flex items-center"><span class="text-gray-300 mr-2">●</span> Administrative Support Staff</li>
                     </ul>
                 </div>
