--- a/help.html
+++ b/help.html
@@ -115,7 +115,7 @@
                         * Account activation & agent assignment requires 1 business day after purchase.
                     </p>
                 </div>
-                <a href="#" class="btn-pay btn-pay-sub">Start Subscription</a>
+                <a href="https://buy.stripe.com/3cI4gAcc9gfgdGgcn81B61p" class="btn-pay btn-pay-sub">Start Subscription</a>
             </div>
         </div>
 
