--- a/coalition.html
+++ b/coalition.html
@@ -14,14 +14,41 @@
         .card-clean { background: #FFFFFF; border: 1px solid #E2E8F0; border-radius: 12px; transition: all 0.4s ease; }
         .card-clean:hover { transform: translateY(-4px); box-shadow: 0 25px 50px -12px rgba(37,99,235,0.15); border-color: rgba(37,99,235,0.3); }
         .gradient-text { background: linear-gradient(135deg, var(--midnight) 0%, var(--trust-blue) 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        /* Custom Scrollbar for Directory */
+        .dir-scroll::-webkit-scrollbar { width: 6px; }
+        .dir-scroll::-webkit-scrollbar-track { background: transparent; }
+        .dir-scroll::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.2); border-radius: 10px; }
     </style>
 </head>
 <body class="flex flex-col min-h-screen border-t-[8px] border-[#2563EB]">
 
+    <div id="command-directory" class="fixed inset-0 z-[100] hidden flex-col transition-opacity duration-300 opacity-0 overflow-y-auto dir-scroll" style="background-color: rgba(11, 19, 43, 0.98); backdrop-filter: blur(16px); -webkit-backdrop-filter: blur(16px);">
+        <div class="w-full max-w-6xl mx-auto p-6 md:p-12 flex flex-col min-h-screen">
+            <div class="flex justify-between items-center mb-16 border-b border-white/10 pb-6 mt-4">
+                <span class="font-black text-2xl tracking-[0.15em] uppercase text-white">APENZAR <span class="text-gray-400 font-light text-sm ml-4 hidden md:inline tracking-widest">GLOBAL DIRECTORY</span></span>
+                <button onclick="toggleDirectory()" class="text-white hover:text-[#60A5FA] transition-colors focus:outline-none flex items-center gap-2 text-[10px] font-mono uppercase tracking-widest bg-white/10 hover:bg-white/20 px-4 py-2 rounded border border-white/20">Close <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="square" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg></button>
+            </div>
+            <div class="grid md:grid-cols-3 gap-12 md:gap-8 mb-16">
+                <div><span class="text-[10px] font-mono font-bold text-[#34D399] uppercase tracking-widest block mb-6 border-b border-white/10 pb-4">Live Markets</span><ul class="space-y-8"><li><a href="orderbook.html" class="group block bg-white/5 p-6 rounded-lg border border-white/10 hover:border-[#34D399]/50 transition-colors relative overflow-hidden shadow-lg"><div class="absolute top-0 left-0 w-1 h-full bg-[#34D399]"></div><h4 class="serif text-2xl text-white mb-2 flex items-center gap-3">The Order Book <span class="w-2 h-2 bg-[#34D399] rounded-full animate-pulse-dot shadow-[0_0_10px_rgba(52,211,153,0.8)]"></span></h4><p class="text-xs text-gray-300 font-light leading-relaxed mb-4 group-hover:text-white transition-colors">View active liquidation blocks and procurement syndicates.</p><span class="text-[10px] font-mono text-[#34D399] uppercase tracking-widest group-hover:translate-x-1 transition-transform inline-block">Enter Ledger &rarr;</span></a></li><li><a href="passport.html" class="group block border border-[#2563EB]/40 bg-[#2563EB]/10 p-6 rounded-lg hover:bg-[#2563EB]/20 transition-colors shadow-lg"><h4 class="serif text-xl text-white mb-2">Network Passport</h4><p class="text-xs text-blue-200 group-hover:text-white font-light mb-4 transition-colors">Secure your global timestamp seniority and execution access.</p><span class="text-[10px] font-mono text-[#60A5FA] group-hover:text-white uppercase tracking-widest transition-colors">Acquire Credentials &rarr;</span></a></li></ul></div>
+                <div><span class="text-[10px] font-mono font-bold text-[#60A5FA] uppercase tracking-widest block mb-6 border-b border-white/10 pb-4">Core Infrastructure</span><ul class="space-y-6"><li><a href="coalition.html" class="group block bg-transparent p-4 -ml-4 rounded-lg hover:bg-white/5 transition-colors border border-transparent hover:border-white/10"><h4 class="serif text-2xl text-white mb-1 group-hover:text-[#60A5FA] transition-colors">The Coalition</h4><p class="text-xs text-gray-400 group-hover:text-gray-300 font-light transition-colors">Inbound Volume Aggregation</p></a></li><li><a href="export.html" class="group block bg-transparent p-4 -ml-4 rounded-lg hover:bg-white/5 transition-colors border border-transparent hover:border-white/10"><h4 class="serif text-2xl text-white mb-1 group-hover:text-[#60A5FA] transition-colors">Macro-Export</h4><p class="text-xs text-gray-400 group-hover:text-gray-300 font-light transition-colors">Outbound Inventory Liquidation</p></a></li></ul></div>
+                <div><span class="text-[10px] font-mono font-bold text-gray-400 uppercase tracking-widest block mb-6 border-b border-white/10 pb-4">Private Vaults</span><ul class="space-y-4"><li><a href="spatial.html" class="group block bg-transparent p-4 -ml-4 rounded-lg hover:bg-white/5 transition-colors border border-transparent hover:border-white/10"><h4 class="serif text-xl text-white mb-1 group-hover:text-[#818CF8] transition-colors">Spatial Capital</h4><p class="text-xs text-gray-400 group-hover:text-gray-300 font-light transition-colors">Real Estate Securitization</p></a></li><li><a href="exchange.html" class="group block bg-transparent p-4 -ml-4 rounded-lg hover:bg-white/5 transition-colors border border-transparent hover:border-white/10"><h4 class="serif text-xl text-white mb-1 group-hover:text-[#22D3EE] transition-colors">Allocation Exchange</h4><p class="text-xs text-gray-400 group-hover:text-gray-300 font-light transition-colors">Network Capacity Bidding</p></a></li><li><a href="reserve.html" class="group block bg-transparent p-4 -ml-4 rounded-lg hover:bg-white/5 transition-colors border border-transparent hover:border-white/10"><h4 class="serif italic text-xl text-white mb-1 group-hover:text-[#FCD34D] transition-colors">The Reserve</h4><p class="text-xs text-gray-400 group-hover:text-gray-300 font-light transition-colors">UHNW Experiential Yield</p></a></li><li><a href="caribbean.html" class="group block bg-transparent p-4 -ml-4 rounded-lg hover:bg-white/5 transition-colors border border-transparent hover:border-white/10"><h4 class="serif text-xl text-white mb-1 group-hover:text-gray-200 transition-colors">Caribbean Ops</h4><p class="text-xs text-gray-400 group-hover:text-gray-300 font-light transition-colors">Regional Macro Commodities</p></a></li></ul></div>
+            </div>
+            <div class="mt-auto border-t border-white/10 pt-8 flex flex-col md:flex-row justify-between items-center gap-4 text-[10px] font-mono uppercase tracking-widest text-gray-400 pb-8"><span>Beverly Hills, California</span><span class="flex items-center gap-2"><svg class="w-3 h-3 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg> System Secure &bull; 256-Bit</span></div>
+        </div>
+    </div>
+
     <nav class="w-full py-6 px-6 md:px-12 flex justify-between items-center bg-white/95 backdrop-blur-md sticky top-0 z-50 border-b border-gray-100 shadow-sm">
-        <div class="flex items-center gap-4 cursor-pointer" onclick="window.history.back()">
-            <span class="font-black text-xl tracking-[0.15em] uppercase text-[#0B132B]">APENZAR</span>
-            <span class="w-px h-5 bg-gray-200 hidden md:block"></span><span class="font-medium text-gray-500 tracking-widest uppercase text-sm hidden md:block">The Coalition</span>
+        <div class="flex items-center gap-4">
+             <button onclick="toggleDirectory()" class="flex items-center gap-2 text-[10px] uppercase tracking-widest font-bold text-gray-600 hover:text-[#2563EB] transition-colors font-mono cursor-pointer bg-gray-50 px-3 py-2 border border-gray-200 rounded-sm">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+                <span class="hidden sm:inline">Directory</span>
+            </button>
+            <span class="w-px h-5 bg-gray-300 hidden md:block ml-2 mr-2"></span>
+
+            <div class="flex items-center gap-4 cursor-pointer" onclick="window.location.href='index.html'">
+                <span class="font-black text-xl tracking-[0.15em] uppercase text-[#0B132B]">APENZAR</span>
+                <span class="w-px h-5 bg-gray-200 hidden md:block"></span><span class="font-medium text-gray-500 tracking-widest uppercase text-sm hidden md:block">The Coalition</span>
+            </div>
         </div>
         <div class="text-[10px] uppercase tracking-[0.2em] text-[#2563EB] font-bold bg-[#EFF6FF] px-4 py-2 rounded border border-[#DBEAFE] flex items-center gap-2 font-mono shadow-sm">
             Public Prospectus
@@ -123,6 +150,8 @@
         <span class="font-black text-xl tracking-[0.15em] uppercase text-white mb-4 block">APENZAR</span>
         <p class="text-[9px] text-gray-500 uppercase tracking-[0.2em] font-semibold font-mono">&copy; 2014-2026. All Rights Reserved.</p>
     </footer>
-
+    <script>
+        function toggleDirectory(){const e=document.getElementById("command-directory"),t=document.body;e.classList.contains("hidden")?(e.classList.remove("hidden"),setTimeout((()=>{e.classList.remove("opacity-0")}),10),t.style.overflow="hidden"):(e.classList.add("opacity-0"),setTimeout((()=>{e.classList.add("hidden"),t.style.overflow=""}),300))}
+    </script>
 </body>
 </html>
